Tue Apr 24 18:41:35 UTC 2007 Yan Dai  <dai_y@ociweb.com>

        * dds\DCPS\DomainParticipantImpl.cpp:

          Added 2 seconds delay after participant creates the built-in-topic 
          datareaders. This is a work around for the problem of the 
          built-in-topic data lost during fully association period. We need 
          find a better solution to synchronize the bit data publishing and
          subscribering.

Thu Apr 19 20:22:30 UTC 2007 Yan Dai  <dai_y@ociweb.com>

        * dds/DCPS/PublisherImpl.cpp:

          Rolled back part of changes in last commit - moved
          the send() call inside the lock since it could cause
          deadlock situation when there are multiple datawriters with
          multiple writing threads in a process. The deadlock situation
          happens when first writing thread calls send_start(), second
          writing thread calls send_start(), first writing thread calls
          send_stop() which hold the lock in DataLinkSet and calls second
          datawriter data_delivered(), the second datawriter holds its
          writer's lock and stuck on acquiring the lock in DataLinkSet.

Wed Apr 18 23:58:56 UTC 2007 Yan Dai  <dai_y@ociweb.com>

        * dds/DCPS/DataWriterImpl.cpp:
        * dds/DCPS/PublisherImpl.h:
        * dds/DCPS/PublisherImpl.cpp:
        
          Moved the send() call outside the lock since the 
          TransportInterface::send() is thread safe and 
          added another parameter to data_available() to avoid
          duplicate code of resend_data_available() from 
          data_available().

Wed Apr 18 18:28:20 UTC 2007 Yan Dai  <dai_y@ociweb.com>

        * dds/DCPS/WriteDataContainer.cpp:
        * dds/DCPS/WriteDataContainer.h:
        * dds/DCPS/DataWriterImpl.cpp:

          Removed unused parameter from reenqueue_all().

        * dds/DCPS/transport/framework/DataLink.cpp:

          Fixed "no newline at end of file" warning.
